Project

General

Profile

Actions

Bug #57094

closed

x-amz-date protocol change breaks aws v4 signature logic: was rfc 2616. Should now be iso 8601.

Added by Marcus Watts over 1 year ago. Updated about 1 year ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
% Done:

100%

Source:
Development
Tags:
auth backport_processed
Backport:
quincy pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

In the upstream documentation here: https://docs.aws.amazon.com/general/latest/gr/sigv4-date-handling.html
x-amz-date is required to be of the form yyyymmddThhmmssZ . This matches iso 8601. Formerly it was in "rfc 2616" format, and this is what the Ceph code still expects in certain circumstances. Most clients are probably still using the old timestamp format, but a recently built copy of the wasabi s3-benchmark program was producing the new style timestamps on PUT requests. Evidently the move is on, and we gotta keep up with the times.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #57196: quincy: x-amz-date protocol change breaks aws v4 signature logic: was rfc 2616. Should now be iso 8601.ResolvedKonstantin ShalyginActions
Copied to rgw - Backport #57197: pacific: x-amz-date protocol change breaks aws v4 signature logic: was rfc 2616. Should now be iso 8601.ResolvedKonstantin ShalyginActions
Actions #1

Updated by Marcus Watts over 1 year ago

I have a candidate fix for this here:
https://github.com/ceph/ceph/pull/47547

Actions #2

Updated by Casey Bodley over 1 year ago

  • Status changed from New to Fix Under Review
  • Tags set to auth
  • Backport set to quincy pacific
  • Pull request ID set to 47547
Actions #3

Updated by Casey Bodley over 1 year ago

  • Status changed from Fix Under Review to Pending Backport
  • Assignee set to Marcus Watts
Actions #4

Updated by Backport Bot over 1 year ago

  • Copied to Backport #57196: quincy: x-amz-date protocol change breaks aws v4 signature logic: was rfc 2616. Should now be iso 8601. added
Actions #5

Updated by Backport Bot over 1 year ago

  • Copied to Backport #57197: pacific: x-amz-date protocol change breaks aws v4 signature logic: was rfc 2616. Should now be iso 8601. added
Actions #6

Updated by Backport Bot over 1 year ago

  • Tags changed from auth to auth backport_processed
Actions #7

Updated by Konstantin Shalygin about 1 year ago

  • Status changed from Pending Backport to Resolved
  • Target version set to v18.0.0
  • % Done changed from 0 to 100
  • Source set to Development
Actions

Also available in: Atom PDF